kubernetes/echo1.yaml
# Route traffic from port 80 to port 5678 on pods with the `app: echo1` label selector.
apiVersion: v1
kind: Service
metadata:
  name: echo1
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echo1
---
# Deployment manages pods with the `app: echo1` label selector.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=welcome to collin's site!"
        ports:
        - containerPort: 5678
