kubernetes/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - collinbrown.site
    - echo2.collinbrown.site
    secretName: echo-tls
  rules:
  - host: collinbrown.site
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.collinbrown.site
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
